crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__expressions__lambda_parameter_modifiers.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
val annotated = { @Anno
  x: Int ->
  x
}

val multiple = { @A
  @B
  x: Int, y: Int ->
  x
}

val noType = { @Anno
  x ->
  x
}

val plain = { x: Int -> x }

val destructured = { (a, b) -> a }

val softKeywordNames = { value -> value }

diagnostics:
(none)
