crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__expressions__lambdas_and_trailing.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.expressions

fun render(items: List<String>, emit: (String) -> Unit) {
  items.forEach { item -> emit(item.uppercase()) }
}

val joined =
  listOf("a", "b", "c").joinToString(separator = ",") { it.uppercase() }

diagnostics:
(none)
