crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__expressions__member_chain_expression_body.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.expressions

val normalized =
  " Alpha Beta Gamma "
    .trim()
    .lowercase()
    .replace(" ", "_")
    .removePrefix("tmp_")
    .removeSuffix("_old")

fun canonical(input: String): String =
  input.trim().lowercase().replace("-", "_")

diagnostics:
(none)
