crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__expressions__simple_expression_bodies.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.expressions

val answer = 1 + 2 * 3

fun doubled(value: Int): Int = value * 2

fun label(input: String): String = input.trim().lowercase()

diagnostics:
(none)
