crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__expressions__string_templates.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.expressions

fun label(name: String, count: Int): String {
  val plural = if (count == 1) "item" else "items"
  return "$name has ${count + 1} $plural"
}

diagnostics:
(none)
