crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__expressions__when_entry_block_bodies.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.expressions

fun classify(k: Int): Int = when (k) {
  0 -> 0
  1 -> {
    fallback(k)
  }
  2 -> {}
  3 -> if (k > 0) 1 else -1
  4 -> run { k * 2 }
  5 ->
    when (k) {
      6 -> 6
      else -> 7
    }
  else -> {
    val doubled = k * 2
    doubled + 1
  }
}

fun dispatch(k: Int) {
  when (k) {
    0 -> {
      reportTheFirstReason(k, k) +
        reportTheSecondReason(k, k) +
        reportTheThirdReason(k, k)
    }
    else -> report(-1)
  }
}

diagnostics:
(none)
