crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__expressions__when_expression.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.expressions

sealed interface Status {
  data object Ready : Status

  data class Failed(val reason: String) : Status
}

fun message(status: Status): String = when (status) {
  Status.Ready -> "ready"
  is Status.Failed -> "failed: ${status.reason}"
}

fun redundantEntrySemicolons(x: Int): String {
  when (x) {
    1 -> return "one"
    else -> return "other"
  }
}

fun entrySemicolonComments(x: Int): String {
  when (x) {
    1 -> return "one" /* mid */
    else -> return "other"
  }
}

diagnostics:
(none)
